--- a/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/LoginTela.form
+++ b/PoliedroAMilhao/src/main/java/br/mycompany/poliedroamilhao/telas/LoginTela.form
@@ -72,7 +72,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="sairButton" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                  <EmptySpace pref="67" max="32767" attributes="0"/>
                   <Component id="imagemLogo" min="-2" pref="257" max="-2" attributes="0"/>
                   <EmptySpace pref="79" max="32767" attributes="0"/>
                   <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
